# calorie-mgmt-api

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.agent/skills/api_development/: SKILL.md
.agent/skills/example_skill/: SKILL.md
.github/workflows/: deploy.yml  tests.yml
apibase/: __init__.py  app.py  middleware.py
apibase/api/: root.py
apibase/api/controllers/v1/: __init__.py  goals.py  meals.py  profile.py  summary.py
apibase/common/: exception.py  hooks.py  utils.py
apibase/db/: api.py  models.py
docs/: AI_DEVELOPMENT.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_LOG.md  FUNCTIONAL_SPEC.md  OPERATIONS.md  SKILL_GUIDE_JP.md
etc/apibase/: config.py
etc/nginx/: nginx.conf
public/: index.html
public/css/: style.css
public/js/: api.js  app.js
tests/: conftest.py  test_auth.py  test_db.py  test_db_crud.py  test_gui.py  test_meals.py  test_phase2_integration.py  test_v1.py
